Update project configuration and enhance S3 integration. Added support for loading presets from S3, updated package dependencies, and improved environment variable management. Removed deprecated preset parsing logic and refined API responses for better data handling.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-node_modules
-default_presets_all
+node_modules/
+default_presets_all/
+
+# Environment variables (contains AWS credentials)
+.env
+
+# OS files
+.DS_Store
