--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "preset-analyzer",
   "version": "1.0.0",
-  "description": "Analyze preset JSON files and export to CSV",
+  "description": "Analyze preset JSON files from S3 and export to CSV",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.967.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2"
   }
 }
